objects/LLC_BI__Loan__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__HMDA_Occupancy__c</fullName>
        <description>--DEPRECATED-- This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This picklist field indicates whether the property will be owner-occupied as a principal dwelling, not owner-occupied, or N/A.</description>
        <label>-D Occupancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Owner-occupied as a principal dwelling</fullName>
                </value>
                <value>
                    <fullName>Code 2—Not owner-occupied as a principal dwelling</fullName>
                </value>
                <value>
                    <fullName>Code 3—Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Preapproval_Requested__c</fullName>
        <description>--DEPRECATED-- This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the transaction involved a pre-approval request for a home purchase loan under a pre-approval program.</description>
        <label>-D Request for Preapproval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Preapproval requested</fullName>
                </value>
                <value>
                    <fullName>Code 2—Preapproval not requested</fullName>
                </value>
                <value>
                    <fullName>Code 3—Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Type__c</fullName>
        <description>--DEPRECATED-- This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the loan or application was for manufactured housing, a multifamily dwelling, or a one- to-four-family dwelling other than manufactured housing.</description>
        <inlineHelpText>Report whether the loan or application was for manufactured housing, a multifamily dwelling, or a one- to-four-family dwelling other than manufactured housing.</inlineHelpText>
        <label>-D Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—One- to four-family dwelling (other than manufactured housing)</fullName>
                </value>
                <value>
                    <fullName>Code 2—Manufactured housing</fullName>
                </value>
                <value>
                    <fullName>Code 3—Multifamily dwelling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Purchaser_Type__c</fullName>
        <description>--DEPRECATED--This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the type of entity that purchased the loan.</description>
        <label>-D Type of Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 0—Loan was not originated or was not sold in calendar year covered by register</fullName>
                </value>
                <value>
                    <fullName>Code 1—Fannie Mae (FNMA)</fullName>
                </value>
                <value>
                    <fullName>Code 2—Ginnie Mae (GNMA)</fullName>
                </value>
                <value>
                    <fullName>Code 3—Freddie Mac (FHLMC)</fullName>
                </value>
                <value>
                    <fullName>Code 4—Farmer Mac (FAMC)</fullName>
                </value>
                <value>
                    <fullName>Code 5—Private securitization</fullName>
                </value>
                <value>
                    <fullName>Code 6—Commercial bank, savings bank, or savings association</fullName>
                </value>
                <value>
                    <fullName>Code 7—Life insurance company, credit union, mortgage bank, or finance company</fullName>
                </value>
                <value>
                    <fullName>Code 8—Affiliate institution</fullName>
                </value>
                <value>
                    <fullName>Code 9—Other type of purchaser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Purpose__c</fullName>
        <description>--DEPRECATED--This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the transaction is for home purchase, home improvement, refinancing, cash-out refinancing, or another purpose.</description>
        <inlineHelpText>HMDA Loan Purpose</inlineHelpText>
        <label>-D Purpose of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Home purchase</fullName>
                </value>
                <value>
                    <fullName>Code 2—Home improvement</fullName>
                </value>
                <value>
                    <fullName>Code 3—Refinancing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Rate_Spread__c</fullName>
        <description>--DEPRECATED--This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates the rate spread which is the difference between the annual percentage rate and average prime offer. The price data takes the form of a &quot;rate spread.&quot; Lenders must report the spread (difference) between the annual percentage rate (APR) on a loan and the rate on treasury securities of comparable maturity—but only for loans with spreads above designated thresholds. So rate spreads are reported for some, but not all, reported home loans. The rate spread, along with Lien Status and HOEPA, help interpret the pricing data.</description>
        <label>-D Rate Spread (##.## format)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Record_Type__c</fullName>
        <description>This field is used to determine which HMDA route/field set (2017 or 2018) will be presented to the user for this loan when collecting HMDA Loan and Entity Compliance information.</description>
        <inlineHelpText>HMDA Loan Purpose</inlineHelpText>
        <label>HMDA Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMDA-Effective-2017</fullName>
                    <default>true</default>
                    <label>HMDA-Effective-2017</label>
                </value>
                <value>
                    <fullName>HMDA-Effective-2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be manually selected, or can be set to be automatically set via the questionnaire. When selected, it indicates that this the loan falls under a category that makes it HMDA reportable. When unselected the loan is not HMDA reportable. By default, this field is unselected</description>
        <label>HMDA Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Type__c</fullName>
        <description>--DEPRECATED-- This field is optional unless the loan requires HMDA, then it is required. It is manually populated. This field indicates whether the loan or application is insured by the Federal Housing Administration, guaranteed by the Veterans Administration, Rural Housing Service, or Farm Service Agency.</description>
        <inlineHelpText>HMDA Loan Type</inlineHelpText>
        <label>-D Type of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Conventional (any loan other than FHA, VA, FSA, or RHS loans)</fullName>
                </value>
                <value>
                    <fullName>Code 2—FHA-insured (Federal Housing Administration)</fullName>
                </value>
                <value>
                    <fullName>Code 3—VA-guaranteed (Veterans Administration)</fullName>
                </value>
                <value>
                    <fullName>Code 4—FSA/RHS-guaranteed (Farm Service Agency or Rural Housing Service)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This reference field indicates the highest level loan in a multitiered facility. It is one of the components that determines the hierarchical tree structure used for navigation and visual representation of the multi-tiered facility. When importing existing loans into a hierarchal structure, the highest loan in the hierarchy must be specified to accurately depict the structure.</description>
        <label>Highest</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Loans (Highest)</relationshipLabel>
        <relationshipName>HighestLoans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should not be altered. This field is used by the nCino Data Administrator to indicate loans that were created prior to nCino.</description>
        <inlineHelpText>The Imported flag represents legacy loans that were created, processed and booked prior to the adoption of nCino.</inlineHelpText>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index_Value__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix.</description>
        <inlineHelpText>This system-populated field displays the current index value percentage.</inlineHelpText>
        <label>Index Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index__c</fullName>
        <description>This field is optional. It is manually selected. It is used to specify the index the lending rate follows.</description>
        <label>Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>LIBOR</fullName>
                </value>
                <value>
                    <fullName>Treasury Constant Maturity - 1 Year +</fullName>
                </value>
                <value>
                    <fullName>Treasury Constant Maturity - 2 Year +</fullName>
                </value>
                <value>
                    <fullName>Treasury Constant Maturity - 3 Year +</fullName>
                </value>
                <value>
                    <fullName>Treasury Constant Maturity - 5 Year +</fullName>
                </value>
                <value>
                    <fullName>Treasury Constant Maturity - 7 Year +</fullName>
                </value>
                <value>
                    <fullName>Treasury Constant Maturity - 10 Year +</fullName>
                </value>
                <value>
                    <fullName>WSJ Prime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Advance__c</fullName>
        <description>This field is optional. It is manually populated. This currency field is used to specify the dollar amount being initially funded at closing.</description>
        <label>Initial Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__InterestRate__c</fullName>
        <description>This field is required. It is manually populated. It defines the interest rate for this loan at the time of origination/closing.</description>
        <inlineHelpText>Total interest rate to the borrower, including prime</inlineHelpText>
        <label>Interest Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Accrual_Method__c</fullName>
        <description>This field is manually selected. This field sets the interest accrual methodology for determining the amount of interest owed per period. It is used for Rate &amp; Payment streams.</description>
        <label>Interest Accrual Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30_360</fullName>
                </value>
                <value>
                    <fullName>Actual_360</fullName>
                </value>
                <value>
                    <fullName>Actual_365</fullName>
                </value>
                <value>
                    <fullName>Actual_Actual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Amount_Paid__c</fullName>
        <description>This field is optional. It is manually populated and represents the total amount of interest paid so far.</description>
        <inlineHelpText>The amount of interest paid to date.</inlineHelpText>
        <label>Interest (Amt) Paid to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Only_Months__c</fullName>
        <description>This field is optional. It is manually populated. It is used to specify the number of monthly interest-only payments for this loan.</description>
        <inlineHelpText>Number of payment months that are interest only. Don&apos;t include these months in the total month terms field above.</inlineHelpText>
        <label>Interest Only Months</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Paid_To_Date__c</fullName>
        <description>This field is optional. It is manually populated. It is used to the specify the date through which interest has been paid.</description>
        <label>Interest Paid To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Adjustment_Frequency__c</fullName>
        <description>This field is optional. It is manually populated. It is used to specify how often an interest rate can be adjusted (e.g., Weekly, Monthly, Quarterly, Annually, etc.).</description>
        <label>Interest Rate Adjustment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Biannual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Every Two Years</fullName>
                </value>
                <value>
                    <fullName>Every Three Years</fullName>
                </value>
                <value>
                    <fullName>Every Five Years</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Percent__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix. The system adds this percentage to the index to determine the applicable rate for the account.</description>
        <inlineHelpText>This system-populated field displays the percentage that the system adds to the index to determine the applicable rate for the account.</inlineHelpText>
        <label>Interest Rate Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically selected. This field is utilized for trigger approval process actions that add loan team members to the loan for the user to view. Loan team members are populated from queues and users chosen to approve items.</description>
        <inlineHelpText>This field is utilized for trigger approval process actions that add loan team members
            to the loan for the user to view. Loan Team Members are populated from queues and users
            chosen to approve items.</inlineHelpText>
        <label>ApprovalTriggerField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Booked__c</fullName>
        <description>This field is automatically selected via formula. When enabled, it indicates a loan has met the stage and status requirements that a financial institution considers to be booked. This is to allow an insight into how many loans have been booked, without having to check the actual loan stage. When disabled, the loan is not booked. By default, it is disabled.</description>
        <formula>CONTAINS(LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Booked__r.LLC_BI__All_Values__c, LLC_BI__Stage_And_Status__c)</formula>
        <label>Is Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Closed__c</fullName>
        <description>This field is automatically selected via formula. When selected it indicates a loan has met the state and status requirements that a financial institution considers to be closed funded. This allows insight into how many loans have closed, without having to check the actual loan stage. When disabled, a loan has not been closed funded. By default, it is unselected.</description>
        <formula>CONTAINS(LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Closed__r.LLC_BI__All_Values__c, LLC_BI__Stage_And_Status__c)</formula>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically selected via trigger. When enabled, it indicates that the loan was created from the copy functionality. When disabled, the loan was not created from copy functionality. By default, it is disabled.</description>
        <label>Is Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Current_Takedown__c</fullName>
        <description>This field specifies if the loan level is a current takedown, or the lowest level in a multi-tiered hierarchy. Multi-tiered loans are only supported through utilizing Product Package. This field auto-populates if configured in the org.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Structure_Hierarchy__c, &apos;Current Takedown&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Takedown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_ELOC__c</fullName>
        <description>This field identifies an ELOC type loan. Depending on configuration, this field is used to specify the structure associated to ELOC loans, and whether that structure is multi-tiered or a single loan. Automatically populated when an ELOC product is selected</description>
        <formula>IF(ISPICKVAL(LLC_BI__Structure__c, &apos;ELOC&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is ELOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_In_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically selected via trigger. When enabled, it is used to indicate if the loan or package is in review. When disabled, it indicates the loan or package is not in review. By default, it is disabled.</description>
        <inlineHelpText>Indicate if the loan or package is in review</inlineHelpText>
        <label>In Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Jumbo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user manually selects this checkbox field to indicate that the loan is a jumbo loan for Sherman calculations. By default, this field is deselected.</description>
        <inlineHelpText>Select this checkbox to indicate that the loan is a jumbo loan.</inlineHelpText>
        <label>Is Jumbo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Lease__c</fullName>
        <description>This formula checkbox field auto-populates and indicates if the loan facility is a lease.</description>
        <formula>IF(LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__c != null &amp;&amp; LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__r.LLC_BI__Is_Lease__c == true, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Letter_of_Credit__c</fullName>
        <description>This field is automatically selected via trigger. When enabled, it indicates if the loan is a letter of credit. When disabled, it indicates a loan is not a letter of credit. By default, it is disabled.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Structure__c, &apos;Letter of Credit&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Letter of Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Limit__c</fullName>
        <description>This field auto-populates and indicates if the loan level is a either a limit or the second highest level in a multi-tiered hierarchy. Product Package must be utilized to support multi-tiered loans.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Structure_Hierarchy__c, &apos;Limit&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be set to be automatically populated via a workflow. It should be enabled by any workflow that would lock a loan for editing, such as when the loan enters the approval process. It should be disabled when the loan is not supposed to be locked. By default, it is disabled.</description>
        <inlineHelpText>Indicate if the loan is locked for editting.</inlineHelpText>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Main__c</fullName>
        <description>This field is auto-populated and identifies if the loan level is a Main Facility or the highest level in a multi-tiered hierarchy. Product Package must be utilized to support multi-tiered loans.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Structure_Hierarchy__c, &apos;Main&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Modification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically selected via trigger. When enabled, it indicates that the loan was created from the modification functionality. When disabled, the loan was not created as a modification. By default, it is disabled.</description>
        <label>Is_Modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Multi_Level_Future__c</fullName>
        <description>This field is automatically selected via formula. When enabled, it indicates that this loan is part of a multi-level future. When disabled, the loan is not part of a multi-level future. By default, it is disabled.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Structure__c, &apos;Multi Level Future&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Multi Level Future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_No_Action_Placeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This boolean field is automatically set by the system. When true, it indicates that the record is a link from a No Action Loan to its placeholder in its original hierarchy. The default value is false.</description>
        <label>Is No Action Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Original_Inactive_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The facility structure was originally deactivated on this loan.</description>
        <inlineHelpText>The facility structure was originally deactivated on this loan.</inlineHelpText>
        <label>Is Original Declined Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Paid_Off__c</fullName>
        <description>This field is automatically populated via formula. When set to &quot;1&quot; it iindicates that the payoff date is in the past and that the loan has been paid off. When set to &quot;0,&quot; the loan has not been paid off. By default, it is set to &quot;0.&quot;</description>
        <formula>IF(LLC_BI__Payoff_Date__c  &lt; DATEVALUE(NOW()), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Paid_Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional boolean field is manually populated. Set this value to true if the loan is a participation (bought or sold).</description>
        <label>Is Participation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Ready_To_Transmit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically selected via trigger. When enabled, a the loan meets the stage and status requirements that a financial institution considers &quot;Ready to Transmit.&quot; This allows loan data to be transmitted to the CUSO. When disabled, a loan does not met these requirements. By default, it is disabled.</description>
        <label>Is Ready to Transmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Regular_Future__c</fullName>
        <description>This field is auto-populated and indicates a regular-future type loan and its associated structure. Depending on configuration, this field specifies whether that structure can be multi-tiered or a single loan.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Structure__c, &apos;Regular Future&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Regular Future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Review_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be set to be automatically selected via workflow. When enabled, it indicates a loan is ready to review. When disabled, a loan is not ready for review. By default, it is disabled.</description>
        <label>Is Review Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_SBA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users manually populate this optional text field. This field indicates whether or not the loan is a SBA loan.</description>
        <inlineHelpText>Populate this field to indicate if this is a SBA loan.</inlineHelpText>
        <label>Is SBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically selected via trigger. It is enabled when the loan has collateral pledged and indicates that the loan has been secured by collateral. When disabled, it indicates that the loan has not been secured by collateral. By default, it is disbaled.</description>
        <inlineHelpText>Is Loan Secured With Collateral</inlineHelpText>
        <label>Is Secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Sublimit__c</fullName>
        <description>This field is auto-populated and identifies if the loan level is a Sublimit or the third level in a multi-tiered hierarchy. Product Package must be utilized to support multi-tiered loans. Note that sublimits are found below limits.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Structure_Hierarchy__c, &apos;Sub Limit&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Sublimit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Syndication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional boolean field is manually populated. Set this value to true if the loan is a syndication.</description>
        <label>Is Syndication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Term_Loan_Current__c</fullName>
        <description>This field is auto-populated and indicates a Current Term loan type and the associated structure. Depending on configuration, this field specifies whether that structure is multi-tiered or a single loan; the default is a single level loan.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Structure__c, &apos;Term Loan/Current&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Term Loan/Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Pay_Date__c</fullName>
        <description>This field is optional. It is manually populated. It is used to specify the date of the last payment received.</description>
        <label>Last Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__LeadSource__c</fullName>
        <description>This field is optional. It is manually populated, but can be set up to be populated when converting a lead. This field is a picklist used to specify the source of the lead. If provided, the value must match one of the values in the Lead Source picklist established for this financial institution.</description>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
                <value>
                    <fullName>Direct Call</fullName>
                </value>
                <value>
                    <fullName>Email Campaign</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Industry Professional</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prior Origination</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Detail__c</fullName>
        <description>This field is optional. It is manually populated. This is a free form text field used to specify details or comments about the lead.</description>
        <label>Lead Detail</label>
        <type>TextArea</type>
    </fields>
</CustomObject>